# alpaka_repo

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  spawn_shell.bash
install/alpaka_welding_cobot_moveit/share/alpaka_welding_cobot_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/alpaka_chassis_description/: CMakeLists.txt  package.xml
src/alpaka_chassis_description/launch/: view_chassis.launch.py
src/alpaka_test_tcp_description/: CMakeLists.txt
src/alpaka_test_tcp_description/launch/: view_test_tcp.launch.py
src/alpaka_test_tcp_description/urdf/: test_tcp.urdf  test_tcp_macro.xacro
src/alpaka_welding_cobot_description/: CMakeLists.txt
src/alpaka_welding_cobot_description/rviz/: view_welding_cobot.rviz
src/alpaka_welding_cobot_description/urdf/: welding_cobot.urdf.xacro
src/alpaka_welding_cobot_moveit/: CMakeLists.txt
src/alpaka_welding_cobot_moveit/include/: ml_node_receiver_driver.hpp
src/alpaka_welding_cobot_moveit/launch/: alpaka_welding_cobot_moveit.launch.py
src/alpaka_welding_cobot_moveit/src/: ml_receiver_node.cpp  ml_receiver_node_driver.cpp
src/alpaka_welding_cobot_moveit_config/: CMakeLists.txt
src/alpaka_welding_cobot_setup/: CMakeLists.txt
src/alpaka_welding_cobot_setup/config/: ur_controllers.yaml
src/alpaka_welding_cobot_setup/launch/: ur_control.launch.py
src/alpaka_welding_gun_description/: CMakeLists.txt  package.xml
src/alpaka_welding_gun_description/rviz/: view_welding_gun.rviz
src/alpaka_welding_gun_description/urdf/: welding_gun.urdf.xacro  welding_gun_macro.xacro
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: alpaka.launch.py  moveit.launch.py
src/cartesian_path/: CMakeLists.txt  package.xml
src/cartesian_path/include/: cartesian.hpp
src/cartesian_path/src/: cartesian.cpp
src/ml_model/: setup.cfg  setup.py
src/ml_model/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  (+1 more)
(+91 files in other folders)
